# statflow

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/statflow/: config.py
src/statflow/features/: __main__.py  cli.py  runner.py
src/statflow/features/sql/: features.sql  park_factors.sql  pitcher_form.sql  team_rolling.sql
src/statflow/ingest/: __main__.py  backfill.py  boxscores.py  cli.py  mlb_api.py  plays.py  schedule.py  transactions.py
src/statflow/models/: __main__.py  baselines.py  cli.py  data.py  importance.py  metrics.py  train.py
src/statflow/quality/: __main__.py  checks.py  cli.py  runner.py
src/statflow/transform/: __main__.py  cli.py  runner.py
src/statflow/transform/sql/: games.sql  team_game_stats.sql
tests/: test_smoke.py
tests/features/: conftest.py  test_cli.py  test_features_assembly.py  test_park_factors.py  test_pitcher_form.py  test_team_rolling.py
tests/ingest/: test_backfill.py  test_boxscores.py  test_cli.py  test_mlb_api.py  test_plays.py  test_schedule.py  test_transactions.py
tests/models/: test_baselines.py  test_cli.py  test_data.py  test_importance.py  test_metrics.py  test_train.py
tests/quality/: conftest.py  test_checks.py  test_runner.py
tests/transform/: conftest.py  test_cli.py  test_runner_games.py  test_runner_pitcher_stats.py  test_runner_team_stats.py
