[project]
name = "statflow"
version = "0.1.0"
description = "MLB game outcome prediction pipeline: ingest, transform, model, serve."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "requests>=2.31",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "duckdb>=1.0",
    "scikit-learn>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "pre-commit>=3.7",
    "responses>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/statflow"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
